--- a/Sign-Up-Forms/index.html
+++ b/Sign-Up-Forms/index.html
@@ -9,21 +9,27 @@
 			rel="stylesheet" />
 		<title>Sign-Up</title>
 	</head>
-	<body>
-		<section class="body-filter"></section>
+	<body onload="loadPage()">
+		<section id="body-filter"></section>
 		<section class="main-text-content">
 			<h1 class="main-message">Be part of our initiative!</h1>
 			<p class="sub-message">
 				By signing up to be a code mentor, you're helping programers all
-				over the world learn to code. Any projects you create will be
-				shared with all of our users in order to facilitate
-				collaboration and build community. See more about our goals in
-				our <a class="sub-message" href="">mission statement.</a>
+				over the world learn to code. You'll be able to host
+				<span class="inline-text"> classes</span> , upload
+				<span class="inline-text">tutorials</span>, answer in
+				<span class="inline-text">forum threads </span>and even launch
+				<span class="inline-text">collaborative coding projects!</span>.
+				Any projects you create will be shared with all of our users in
+				order to facilitate collaboration and build community. See more
+				about our goals in our
+				<a class="sub-message" href="">mission statement.</a>
 			</p>
 		</section>
 		<section class="form-container">
 			<section class="gold-member">
-				Become a gold member starting at $9.99/month!
+				Become a <span class="gold">gold</span> member starting at
+				$9.99/month!
 			</section>
 			<div class="form-box">
 				<form id="sign-up-form">
